--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
@@ -17,7 +25,9 @@
     "express": "^5.1.0",
     "md5": "^2.3.0",
     "mongoose": "^8.17.1",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "pre-commit": "^1.0.10",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
