--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "ES6",//cho phép typescript biên dịch sang ES6
         "module": "commonjs",//commonjs là tiêu chuẩn đc sử dụng trong node.js để làm việc vs các module
         "removeComments": true,//xóa các comment khi biên dịch sang  file js
-        "esModuleInterop": true//sử dụng từ khóa import thay cho require
+        "esModuleInterop": true,//sử dụng từ khóa import thay cho require
+        "outDir": "dist"
     }
 }
